--- a/.npmignore
+++ b/.npmignore
@@ -1,11 +1,13 @@
 .DS_Store
 node_modules
+.idea/
 # User-specific stuff
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+
 
 # Generated files
 .idea/**/contentModel.xml
